Version ClaSS-1.0.18 release (2012/03/14)
-------------------------------------------

Added the absence notes to the summary attendnace report sheet.

Added a list all button to the MedBook.

Upgraded tinyMCE to fix compatibility with Firefox 11 and above.

New import routine for transport routes and journeys.


Version ClaSS-1.0.17 release (2012/03/10)
-------------------------------------------

Register notices now work with house groups using their yeargroup to
identify.

Allow grouping of order items by catalogue and added catalogue_id
field to order and catalogue table.

Delete button for unsued budgets (without orders and without subbudgets).

A description field added to classes table for a subject's curriculum outline.

Fix to comment writer for tinyMCE to use character limit on multiple instances.

Use kill_session on index.php page to make sure cookies are dead.

Improved the positioning of derived (sum, average and level) columns
by calculating a relevant date.

Improved the assessment scores import by adding options for start
column and field separator.

Fix to update export to allow repeat of previous exports and to
export_students so that headers are not missed.

New MarkBook column type for text only comments.

Fix to assessment profiles when auto column is an average.

Improvement to profiles to exclude Estimates and Targets from calculations.

Colour progression indicators in MarkBook for assessment profiles of type=dif.

Extra click throughs on the enrolments table for new enrolments and
leavers during current year.



Version ClaSS-1.0.16 release (2012/02/26)
-------------------------------------------

Register notices re-worked to use a div overlay and accept html content.

Reminder messages to tutors for incomplete registers.

Added a B for boarder flag to student tables.

Fixed the chechrowIndicator for yes/no radio boxes.

Buttons to switch between one day lesson attendance and daily
registration views.
